Fix vertical spacing of meta-data on permalink page

--- a/src/styles/permalink.scss
+++ b/src/styles/permalink.scss
@@ -69,6 +69,13 @@
       color: $base-font-color;
     }
   }
+
+  p {
+    margin-bottom: 19px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 
